--- a/front/juego.css
+++ b/front/juego.css
@@ -51,11 +51,12 @@ body {
   .jugador {
     width: 100px;
     height: 100px;
-    border: 3px solid transparent;
+    border: 3px;
     border-radius: 1rem;
     overflow: hidden;
     transition: transform 0.2s, border-color 0.2s;
     cursor: pointer;
+    background-color: #134670;
   }
   
   .jugador img {
@@ -78,6 +79,7 @@ body {
   .boton-enviar {
     background-color: #FDB927; 
     color: #000;
+    margin: 2rem;
     padding: 0.8rem 1.5rem;
     border: none;
     border-radius: 2rem;
@@ -88,7 +90,7 @@ body {
   }
   
   .boton-enviar:hover {
-    background-color: #e6a800;
+    background-color: #e6a800;;
   }
   
   
